Begin experimental database migration